--- a/Dynamic Programming/Questions/DP1.ipynb
+++ b/Dynamic Programming/Questions/DP1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,14 +92,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 6, 17, 37, 98, 181, 213, 247, 329, 470, 560, 586, 722, 807, 839, 913]\n"
+      "[0, 82, 153, 206, 296, 358, 422, 516, 650, 728, 776, 889, 896, 908, 999, 1037]\n"
      ]
     }
    ],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -310,6 +310,114 @@
     "deno = [3,5,2]\n",
     "value = 13\n",
     "print(tender_change(deno, value))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q.6.18) Denomination for value V (use denomination at most once)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tender_change1(deno, value):\n",
+    "    n = len(deno)\n",
+    "    K = np.zeros((n,value+1))\n",
+    "    #print(n)\n",
+    "    for i in range(0,n,1):\n",
+    "        for g in range(1,value+1,1):\n",
+    "        \n",
+    "            #print(i)\n",
+    "            if g >= deno[i] and K[i,g]!=value:\n",
+    "                K[i,g] = K[i-1,g-deno[i]] + deno[i]\n",
+    "            else:\n",
+    "                K[i,g] = K[i-1,g]\n",
+    "    #print(K)\n",
+    "    if K[-1,-1] == value:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "deno = [1,5,10,20]\n",
+    "value = 40\n",
+    "print(tender_change1(deno, value))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q.6.19) Denomination for value V (max K coins)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tender_change2(deno, value,count):\n",
+    "    n = len(deno)\n",
+    "    K = np.zeros((n,value+1))\n",
+    "    #print(n)\n",
+    "    \n",
+    "    for i in range(0,n,1):\n",
+    "        for j in range(1,value+1,1):\n",
+    "            if deno[i]<=j:\n",
+    "                #print(\"here\")\n",
+    "                K[i,j] = min(K[i,j-deno[i]],K[i,j-1])+1\n",
+    "            else:\n",
+    "                K[i,j] = K[i,j-1]\n",
+    "    print(K)\n",
+    "    return K[-1,-1]\n",
+    "    #if K[-1,-1] == value:\n",
+    "    #    return True\n",
+    "    #else:\n",
+    "    #    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.  1.  2.  3.  4.  5.  6.  7.  8.  9. 10. 11. 12. 13. 14. 15.]\n",
+      " [ 0.  0.  0.  0.  0.  1.  1.  1.  1.  1.  2.  2.  2.  2.  2.  3.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  1.  1.  1.  1.  1.  1.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]]\n",
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "deno = [1,5,10,20]\n",
+    "value = 15\n",
+    "count = 4\n",
+    "print(tender_change2(deno, value,count))"
    ]
   },
   {
@@ -343,7 +451,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
